# rules_uniffi

./: .bazelrc  .gitignore  BUILD  DO_NOT_BUILD_HERE  MODULE.bazel  README  README.md  bindeps.lockfile  install  java.log.macbook-pro-5.christianbelloni.log.java.20260122-164734.91097  javalog.properties  lock
.github/workflows/: release.yaml  release_prep.sh  tag.yaml
examples/android/: BUILD  MODULE.bazel
examples/android/rust/: BUILD
examples/android/rust/src/: lib.rs
examples/android/src/main/: AndroidManifest.xml
examples/trivial/: BUILD  Cargo.toml  MODULE.bazel  README.md  main.kt  main.swift
examples/trivial/my-lib/: BUILD  Cargo.toml
examples/trivial/my-lib/src/: lib.rs
examples/workspace/: .bazelrc  Cargo.toml  MODULE.bazel  maven_install.json
examples/workspace/android/: AndroidManifest.xml  BUILD
examples/workspace/android/src/: MainActivity.kt
examples/workspace/macos/: BUILD  main.swift
examples/workspace/rust/: BUILD
examples/workspace/rust/crates/my-adder/: BUILD  Cargo.toml
examples/workspace/rust/crates/my-multiplier/: BUILD  Cargo.toml
examples/workspace/rust/crates/my-multiplier/src/: lib.rs
examples/workspace/rust/crates/shared/: BUILD  Cargo.toml
examples/workspace/rust/crates/shared/src/: lib.rs
examples/workspace/rust/my-artifact/: BUILD  Cargo.toml
examples/workspace/rust/my-artifact/src/: lib.rs
rules/: defs.bzl
rules/private/: providers.bzl  swift.bzl
server/: cmdline  command_port  request_cookie  response_cookie  server_info.rawproto
tests/: BUILD  Cargo.toml  MyLibrary.swift  my_library.rs
tests/build_tests/: BUILD  Cargo.toml  main.swift
tests/multi_crates/: BUILD  Main.kt  main.swift
tests/multi_crates/crate-1/: BUILD  Cargo.toml  my_library_1.rs
tests/multi_crates/crate-2/: BUILD  Cargo.toml  my_library_2.rs
tests/multi_crates/src/main/java/com/example/: BazelApp.java
tests/single_crate/: AndroidTest.kt  BUILD  main.swift  my_library.rs
tests/trivial/: BUILD  lib.rs  main.swift
tools/: BUILD  BUILD.bazel  Cargo.toml
tools/src/: main.rs
uniffi/: android.bzl  defs.bzl  kotlin.bzl  swift.bzl  utils.bzl
uniffi/private/: actions.bzl  android.bzl  android_link_hack.c  aspects.bzl  common.bzl  kotlin.bzl  providers.bzl  swift.bzl  swift2.bzl  uniffi.bzl  utils.bzl
