
module(
    name = "rules_uniffi",
    version = "0.1.5"
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "apple_support", version = "1.24.5", repo_name = "build_bazel_apple_support")

bazel_dep(
    name = "rules_rs",
    version = "0.0.94",
)

rules_rust = use_extension("@rules_rs//rs:rules_rust.bzl", "rules_rust")
use_repo(rules_rust, "rules_rust")

bazel_dep(
    name = "rules_swift",
    version = "2.8.2",
)

# bazel_dep(name = "rules_swift", version = "3.3.0", repo_name = "build_bazel_rules_swift")

bazel_dep(
    name = "rules_cc",
    version = "0.2.14"
)

bazel_dep(
    name = "bazel_skylib", 
    version = "1.8.2"
)

bazel_dep(
    name = "rules_kotlin",
    version = "2.2.0"
)

bazel_dep(name = "rules_android", version = "0.6.6")

remote_android_extensions = use_extension("@rules_android//bzlmod_extensions:android_extensions.bzl", "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")

use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    name = "uniffi_maven",
    artifacts = [
        "net.java.dev.jna:jna:5.18.1",
        "androidx.annotation:annotation:1.9.1",
        "junit:junit:4.13-beta-3",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com",
    ],
)

use_repo(maven, "uniffi_maven")

bindeps = use_extension("@rules_rs//rs:extensions.bzl", "crate")

bindeps.spec(package = "uniffi", version = "=0.31.0", artifact = "bin", features = ["cli"], default_features = False)
bindeps.annotation(crate = "uniffi", gen_all_binaries = True)

rust_host_tools = use_extension("@rules_rs//rs:extensions.bzl", "rust_host_tools")

rust_host_tools.host_tools(
    name = "uniffi_rht_nightly",
    version = "nightly",
)
use_repo(
    rust_host_tools,
    "uniffi_rht_nightly",
)

bindeps.from_specs(
  name = "bindeps",
  host_tools = "@uniffi_rht_nightly",
)

use_repo(bindeps, "bindeps")

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")

crate.spec(package = "uniffi", version = "=0.31", default_features = False)

crate.from_specs()
use_repo(crate, "crates")


