
module(name = "rules_uniffi", version="0.1.1")

bazel_dep(name = "platforms", version = "1.1.0")

### Android

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

bazel_dep(name = "rules_android", version = "0.7.0")

remote_android_extensions = use_extension("@rules_android//bzlmod_extensions:android_extensions.bzl", "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

bazel_dep(name = "rules_android_ndk", version = "0.1.3")

# remove when (#119) lands
git_override(
  module_name = "rules_android_ndk",
  remote = "https://github.com/bazelbuild/rules_android_ndk.git",
  commit = "3d4ad354abe1fea8114aaceb035f5717d5214752"
)

android_ndk_repository_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
use_repo(android_ndk_repository_extension, "androidndk")

register_toolchains("@androidndk//:all")

### Rust

bazel_dep(name = "rules_rs", version = "0.0.94")
bazel_dep(name = "llvm", version = "0.8.9")

toolchains = use_extension("@rules_rs//rs/toolchains:module_extension.bzl", "toolchains")
toolchains.toolchain(
    edition = "2024",
    version = "1.95.0",
)
use_repo(toolchains, "default_rust_toolchains")

register_toolchains(
    "@default_rust_toolchains//:all",
    "@llvm//toolchain:all",
)

rules_rust = use_extension("@rules_rs//rs:rules_rust.bzl", "rules_rust")
use_repo(rules_rust, "rules_rust")

# rust_host_tools = use_extension("@rules_rs//rs:extensions.bzl", "rust_host_tools")
# rust_host_tools.host_tools(name = "rust_host_tools_nightly", version = "nightly")
# use_repo(rust_host_tools, "rust_host_tools_nightly")

bindeps = use_extension("@rules_rs//rs:extensions.bzl", "crate")

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
crate.from_cargo(
    name = "u_deps",
    cargo_lock = "//3rdparty/uniffi-bin:Cargo.lock",
    cargo_toml = "//3rdparty/uniffi-bin:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-pc-windows-msvc",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(crate, "u_deps")

### Jna deps

bazel_dep(name = "rules_jvm_external", version = "6.9")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
  aar_import_bzl_label = "@rules_android//rules:rules.bzl",
  name = "u_maven",
  artifacts = [
      "net.java.dev.jna:jna:5.18.1@aar",
      "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2"
  ],
  repositories = ["https://repo1.maven.org/maven2"],
  use_starlark_android_rules = True
)

use_repo(maven, "u_maven")

# rules_cc

bazel_dep(name = "apple_support", version = "2.2.0", repo_name = "build_bazel_apple_support")

bazel_dep(name = "rules_cc", version= "0.2.19")

# Swift

bazel_dep(name = "rules_swift", version = "3.4.2")
single_version_override(module_name = "rules_swift", version = "3.4.2")

# Kotlin

bazel_dep(name = "rules_kotlin", version = "2.2.2")

