
bazel_dep(name = "apple_support", version = "1.22.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_apple", version = "3.22.0", repo_name = "build_bazel_rules_apple")

bazel_dep(
    name = "rules_uniffi",
)

local_path_override(
    module_name = "rules_uniffi",
    path = "../.."
)

bazel_dep(name = "rules_rust")

git_override(
    module_name = "rules_rust",
    commit = "bf408cb5bd5cc147cf3c14c971a8277056f5eb81",
    remote = "https://github.com/ChristianBelloni/rules_rust.git"
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)

use_repo(crate, "crates")

bazel_dep(
    name = "rules_swift",
    version = "2.8.2",
)

bazel_dep(name = "rules_kotlin", version = "2.1.4")
