bazel_dep(name = "rules_uniffi")

local_path_override(
  module_name = "rules_uniffi",
  path = "../.."
)

bazel_dep(name = "rules_rust", version = "0.68.1")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

bazel_dep(name = "rules_swift", version = "3.4.2")
bazel_dep(name = "apple_support", version = "2.2.0", repo_name = "build_bazel_apple_support")
