bazel_dep(name = "rules_uniffi")

local_path_override(
  module_name = "rules_uniffi",
  path = "../.."
)

bazel_dep(name = "rules_rs", version = "0.0.94")
bazel_dep(name = "llvm", version = "0.8.9")

toolchains = use_extension("@rules_rs//rs/toolchains:module_extension.bzl", "toolchains")
toolchains.toolchain(
    edition = "2024",
    version = "1.95.0",
)
use_repo(toolchains, "default_rust_toolchains")

register_toolchains(
    "@default_rust_toolchains//:all",
    "@llvm//toolchain:all",
)

rules_rust = use_extension("@rules_rs//rs:rules_rust.bzl", "rules_rust")
use_repo(rules_rust, "rules_rust")

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")

crate.from_cargo(
    name = "crates",
    cargo_lock = "//:Cargo.lock",
    cargo_toml = "//:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-pc-windows-msvc",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(crate, "crates")

bazel_dep(name = "rules_swift", version = "3.4.2")
bazel_dep(name = "apple_support", version = "2.2.0", repo_name = "build_bazel_apple_support")
