local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "local_repository")

# bazel_dep(name = "rules_uniffi")
# local_path_override(module_name = "rules_uniffi", path = "../..")

bazel_dep(name = "rules_uniffi", version = "0.1.0")
archive_override(
  module_name = "rules_uniffi",
  strip_prefix = "rules_uniffi-0.1.0",
  urls = ["https://github.com/christian-belloni/rules_uniffi/releases/download/v0.1.0/rules_uniffi-v0.1.0.tar.gz"],
  sha256 = "11e5bf90a81b075693f41a93b24c5ebe5b561625152583dc11b4861ef4b89370"
)

bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "rules_kotlin", version = "2.2.2")

bazel_dep(name = "rules_rust", version = "0.68.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2024", extra_target_triples = ["aarch64-linux-android"])

use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
  name = "crates",
  cargo_lockfile = "//:Cargo.lock",
  manifests = ["//:Cargo.toml"],
  supported_platform_triples = ["aarch64-apple-darwin", "aarch64-linux-android"]
)
use_repo(crate, "crates")

bazel_dep(name = "rules_android", version = "0.7.1")

register_toolchains("@rules_android//toolchains/android:android_default_toolchain", "@rules_android//toolchains/android_sdk:android_sdk_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

bazel_dep(name = "rules_android_ndk", version = "0.1.3")

# remove when (#119) lands
git_override(
  module_name = "rules_android_ndk",
  remote = "https://github.com/bazelbuild/rules_android_ndk.git",
  commit = "3d4ad354abe1fea8114aaceb035f5717d5214752"
)

android_ndk_repository_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
use_repo(android_ndk_repository_extension, "androidndk")

register_toolchains("@androidndk//:all")

bazel_dep(name = "apple_support", version = "2.1.0", repo_name = "build_bazel_apple_support")

bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

_KOTLIN_COMPILER_VERSION = "2.2.21"

maven.install(
    aar_import_bzl_label = "@rules_android//rules:rules.bzl",
    artifacts = [
      "org.jetbrains.kotlin:kotlin-stdlib:{}".format(_KOTLIN_COMPILER_VERSION),
      "org.jetbrains.kotlin:kotlin-gradle-plugin:%s" % _KOTLIN_COMPILER_VERSION,
      "org.jetbrains.kotlin:kotlin-serialization:%s" % _KOTLIN_COMPILER_VERSION,
      "org.jetbrains.kotlin:kotlin-compose-compiler-plugin-embeddable:%s" % _KOTLIN_COMPILER_VERSION,
      "androidx.core:core-ktx:1.15.0",
      "androidx.appcompat:appcompat:1.7.0",
      "androidx.activity:activity-compose:1.7.0",
      "androidx.collection:collection:1.5.0-alpha06",
      "androidx.lifecycle:lifecycle-runtime:2.6.1",
      "androidx.lifecycle:lifecycle-common:2.6.1",
      "androidx.compose.material:material:1.7.6",
      "androidx.compose.ui:ui:1.7.6",
      "androidx.compose.ui:ui-tooling:1.7.6",
      "androidx.compose.runtime:runtime:1.7.6",
      "androidx.concurrent:concurrent-futures-ktx:1.3.0",
      "com.google.guava:guava:29.0-android"
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    resolver = "maven",
    use_starlark_android_rules = True,
)

use_repo(maven, "maven")

bazel_dep(name = "rules_swift", version = "3.4.2")

single_version_override(module_name = "rules_swift", version = "3.4.2")
